// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Breadcrumb Current Page With Aria Current 1`] = `
<div
  className="storybook-container"
>
  <div
    className="breadcrumb--container"
    data-testid="overflow"
  >
    <nav
      aria-label="Breadcrumb"
      className="some-class"
      onClick={[Function]}
    >
      <ol
        className="bx--breadcrumb"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <a
            className="bx--link"
            href="/#"
          >
            Breadcrumb 1
          </a>
        </li>
        <li
          className="bx--breadcrumb-item"
        >
          <a
            className="bx--link"
            href="#"
          >
            Breadcrumb 2
          </a>
        </li>
        <li
          className="bx--breadcrumb-item"
        >
          <a
            aria-current="page"
            className="bx--link"
            href="#"
          >
            Breadcrumb 3
          </a>
        </li>
      </ol>
    </nav>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Breadcrumb Default 1`] = `
<div
  className="storybook-container"
>
  <div
    className="breadcrumb--container"
    data-testid="overflow"
  >
    <nav
      aria-label="Breadcrumb"
      className="some-class"
      onClick={[Function]}
    >
      <ol
        className="bx--breadcrumb"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <a
            className="bx--link"
            href="#"
          >
            Breadcrumb 1
          </a>
        </li>
        <li
          className="bx--breadcrumb-item"
        >
          <a
            className="bx--link"
            href="#"
          >
            Breadcrumb 2
          </a>
        </li>
        <li
          className="bx--breadcrumb-item"
        >
          <a
            className="bx--link"
            href="#"
          >
            Breadcrumb 3
          </a>
        </li>
      </ol>
    </nav>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Breadcrumb Has Overflow 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "border": "1px solid",
        "padding": "1rem",
        "width": "50vw",
      }
    }
  >
    <div
      className="breadcrumb--container"
      data-testid="overflow"
    >
      <nav
        aria-label="Breadcrumb"
        className="some-class"
        onClick={[Function]}
      >
        <ol
          className="bx--breadcrumb"
        >
          <li
            className="bx--breadcrumb-item"
            title="1 Homexxxxxxxxxxxxxxxxxxxxxx"
          >
            <a
              className="bx--link"
              href="#"
            >
              1 Homexxxxxxxxxxxxxxxxxxxxxx
            </a>
          </li>
          <li
            className="bx--breadcrumb-item"
            onClick={[Function]}
            title="2 Devices"
          >
            <a
              className="bx--link"
              href="#"
            >
              2 Devices
            </a>
          </li>
          <li
            className="bx--breadcrumb-item"
            title="3 A really long page name"
          >
            <a
              className="bx--link"
              href="#"
            >
              3 A really long page name
            </a>
          </li>
          <li
            className="bx--breadcrumb-item"
            title="4 Another page"
          >
            <a
              className="bx--link"
              href="#"
            >
              4 Another page
            </a>
          </li>
          <li
            className="bx--breadcrumb-item bx--breadcrumb-item--current"
            title="5th level page"
          >
            <a
              className="bx--link"
              href="#"
            >
              5th level page
            </a>
          </li>
        </ol>
      </nav>
    </div>
  </div>
  <p
    style={
      Object {
        "marginTop": "4rem",
      }
    }
  >
    Note: \`hasOverflow\` utilizes a
     
    <a
      href="https://developer.mozilla.org/en-US/docs/Web/API/ResizeObserver"
    >
      ResizeObserver
    </a>
     
    to detect changes to the container width. This library does not provide a
     
    <a
      href="https://www.npmjs.com/package/resize-observer-polyfill"
    >
      polyfill
    </a>
    , it will likely need to be added to your application due to
     
    <a
      href="https://caniuse.com/#feat=resizeobserver"
    >
      current browser support
    </a>
    . This story will not demonstrate the \`hasOverflow\` functionality in browsers without support for ResizeObserver.
  </p>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Breadcrumb Skeleton 1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--breadcrumb bx--skeleton"
  >
    <div
      className="bx--breadcrumb-item"
    >
      <span
        className="bx--link"
      >
         
      </span>
    </div>
    <div
      className="bx--breadcrumb-item"
    >
      <span
        className="bx--link"
      >
         
      </span>
    </div>
    <div
      className="bx--breadcrumb-item"
    >
      <span
        className="bx--link"
      >
         
      </span>
    </div>
  </div>
</div>
`;
